# BotLeadsCreater

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  logging_config.py
app/bot/: bot.py  contacted_keyboard.py  handlers.py  lead_keyboard.py  niche_actions_keyboard.py  niches_keyboard.py
app/db/: crud.py  init_db.py  models.py  session.py
app/integrations/: http_fetch.py  serper.py
app/llm/: base_client.py  llm_stage.py  open_router_client.py  prompts.py
app/pipeline/: dto.py
app/repositories/: domain_repo.py  query_repo.py  search_cache_repo.py  user_domain_repo.py
app/services/: pipeline_service.py
app/test/: conftest.py
app/test/db/: test_user.py
app/test/unit/: test_normalize_domain.py
app/utils/: html_signals.py  url_norm.py
